--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --global-padding: calc(100vw * 0.05);
-  --main-bg: rgba(0, 0, 0, .62);
+  --main-bg: rgba(194, 194, 194, 0.62);
 }
 
 * {
@@ -27,7 +27,7 @@ html::-webkit-scrollbar-track {
 
 /*separate styles*/
 body {
-  background: center center/cover no-repeat fixed url("https://images.unsplash.com/photo-1595355308161-4ab4c6a2b4aa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2072&q=80");
+  background-image: url('/img/istockphoto-1277748423-640x640.jpg');
   display: grid;
   transition: all 0.2s ease;
   grid-template: "header header header " "aside main main " "footer footer footer"/1fr 1fr 1fr;
@@ -113,14 +113,15 @@ aside section .interests-section h3 {
   display: flex;
   padding: 0 0 0 0;
   text-transform: uppercase;
-  color: #aaa;
+  color: #1976d2;
+  font-size: 1.1rem;
+  font-weight: 800;
 }
 aside section .main-info {
   width: 100%;
   display: inherit;
   column-gap: 1rem;
   height: fit-content;
-  padding-bottom: 1.5rem;
 }
 aside section .main-info .photo {
   width: clamp(10rem, 100%, 15rem);
@@ -132,13 +133,13 @@ aside section .main-info .photo {
 }
 aside section .main-info .photo img {
   display: flex;
-  border-radius: 100%;
+  border-radius: 5%;
   width: 100%;
   height: 100%;
   object-fit: cover;
   filter: drop-shadow(0 0.25rem 1rem rgba(0, 0, 0, 0.15));
 }
-aside section .main-info .info {
+aside section .info {
   flex-grow: 1;
   display: flex;
   row-gap: 0.5rem;
@@ -147,14 +148,14 @@ aside section .main-info .info {
   justify-content: center;
   padding: 1rem 0;
 }
-aside section .main-info .info .contact-items {
+aside section .info .contact-items {
   gap: 1rem;
   display: flex;
-  flex-flow: column;
+  flex-flow: row;
   align-items: center;
   justify-content: flex-start;
 }
-aside section .main-info .info .contact-items a {
+aside section .info .contact-items a {
   display: flex;
   color: #fafafa;
   font-size: clamp(1.5rem, 3vw, 2.2rem);
@@ -178,24 +179,24 @@ aside section .skill-section .lang-tags .lang-item,
 aside section .lang_section .skill-tags .skill-item,
 aside section .lang_section .skill-tags .lang-item,
 aside section .lang_section .lang-tags .skill-item,
-aside section .lang_section .lang-tags .lang-item {
-  color: #f1f1f1;
+aside section .lang_section .lang-tags .lang-item{
+  color: #1976d2;
   display: flex;
   line-height: 1;
   font-size: 0.9rem;
   column-gap: 0.3rem;
   align-items: center;
-  border-radius: 1rem;
-  padding: 0.35rem 0.7rem;
+  border-radius: 0.5rem;
+  padding: 3px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #fff;
   border-top-color: #fff;
   border-left-color: #fff;
   border-bottom-color: #bbb;
   border-right-color: #bbb;
   transition: all 0.15s ease;
   cursor: pointer;
-  font-weight: 200;
+  font-weight: 400;
   font-family: "Fira Sans Condensed", sans-serif;
 }
 aside section .skill-section .skill-tags .skill-item s,
@@ -211,9 +212,10 @@ aside section .lang_section .lang-tags .lang-item s {
   font-size: 0.75rem;
   border-radius: 1rem;
   align-items: center;
-  padding: 0.1rem 0.25rem;
+  padding: 0rem 0.1rem;
   text-decoration: none;
   justify-content: center;
+  transition: 0.3s;
 }
 aside section .skill-section .skill-tags .skill-item s:after,
 aside section .skill-section .skill-tags .lang-item s:after,
@@ -244,12 +246,14 @@ aside section .lang_section .skill-tags .lang-item:hover s,
 aside section .lang_section .lang-tags .skill-item:hover s,
 aside section .lang_section .lang-tags .lang-item:hover s {
   color: #aaa;
+  transition: 0.3s ease;
 }
 aside section .skill-section .skill-tags .lang-item s,
 aside section .skill-section .lang-tags .lang-item s,
 aside section .lang_section .skill-tags .lang-item s,
 aside section .lang_section .lang-tags .lang-item s {
   line-height: 1;
+  transition: 0.3s ease;
 }
 aside section .skill-section .skill-tags .lang-item s:after,
 aside section .skill-section .lang-tags .lang-item s:after,
@@ -264,24 +268,24 @@ aside section .interests-section .hobby-tags {
   flex-flow: row wrap;
 }
 aside section .interests-section .hobby-tags .hobby-item {
-  color: #f1f1f1;
+  color: #1976d2;
   display: flex;
   line-height: 1;
   font-size: 0.9rem;
   column-gap: 0.3rem;
   align-items: center;
-  border-radius: 1rem;
-  padding: 0.4rem 0.7rem;
+  border-radius: 0.5rem;
+  padding: 3px;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #fff;
   border-top-color: #fff;
   border-left-color: #fff;
   border-bottom-color: #bbb;
   border-right-color: #bbb;
   transition: all 0.15s ease;
   cursor: pointer;
+  font-weight: 400;
   font-family: "Fira Sans Condensed", sans-serif;
-  font-weight: 200;
 }
 aside section .interests-section .hobby-tags .hobby-item:hover {
   box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.08);
@@ -377,9 +381,26 @@ main section .education .eduItem h5 hr {
 
 .myWork{
   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+  flex-wrap: nowrap;
+  gap: 15px;
+  padding: 15px 0px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
+.myWork::-webkit-scrollbar {
+  width: 1px;
+  height: 3px;
+}
+.myWork::-webkit-scrollbar-thumb {
+  background: #c4c4c4;
+  border-radius: 1.5px;
+  height: 2px;
+}
+.myWork::-webkit-scrollbar-track {
+  background: rgba(189, 255, 255, 0.1);
+  border-radius: 1.5px;
+}
+
 .single_work_block{
   width: 100%;
   max-width: 350px;
@@ -387,8 +408,10 @@ main section .education .eduItem h5 hr {
 
   position: relative;
 }
+
 .single_work_block img{
   width: 100%;
+  min-width: 320px;
   height: 100%;
   border-radius: 15px;
   border: 1px solid transparent;
@@ -408,7 +431,7 @@ main section .education .eduItem h5 hr {
   border-bottom-right-radius: 15px;
 }
 .single_work_block:hover img {
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 7px rgba(255, 255, 255, 0.7);
 }
 .single_work_block:hover h3 {
   color: #fff;
@@ -448,5 +471,58 @@ footer section .socials a {
   text-decoration: none;
   justify-content: center;
 }
-
+.fa-telegram{
+  color: #28b4d8;
+}
+.fa-viber{
+  color: #d12bd1;
+}
+.fa-whatsapp{
+  color: #14bd14;
+}
+.anim-item{
+  position: relative;
+  z-index: 2;
+  overflow: hidden;
+}
+.anim-item span{
+  position: relative;
+  z-index: 2;
+  color: #1976d2;
+  display: flex;
+  line-height: 1;
+  font-size: 0.9rem;
+  column-gap: 0.3rem;
+  align-items: center;
+  border-radius: 3px;
+  padding: 0.35rem 0.7rem;
+  justify-content: center;
+  background-color: #fff;
+  border-top-color: #fff;
+  border-left-color: #fff;
+  border-bottom-color: #bbb;
+  border-right-color: #bbb;
+  transition: all 0.15s ease;
+  cursor: pointer;
+  font-weight: 400;
+  font-family: "Fira Sans Condensed", sans-serif;
+}
+.anim-item::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 200%;
+  height: 100%;
+  background: linear-gradient(115deg, #61afc6, #1de1df, #92c7c9, #37aedd, #31cdb9);
+  background-size: 50% 100%;
+}
+.anim-item:hover:before{
+  animation: SidebarCreate-module_rainbowSlide-feOE0 .75s linear infinite;
+}
+@keyframes SidebarCreate-module_rainbowSlide-feOE0 {
+  to {
+      transform: translateX(-50%)
+  }
+}
 /*# sourceMappingURL=main.css.map */
