--- a/main.css
+++ b/main.css
@@ -28,6 +28,8 @@ html::-webkit-scrollbar-track {
 /*separate styles*/
 body {
   background-image: url('img/istockphoto-1277748423-640x640.jpg');
+  background-color: cover;
+  background-repeat: no-repeat;
   display: grid;
   transition: all 0.2s ease;
   grid-template: "header header header " "aside main main " "footer footer footer"/1fr 1fr 1fr;
