--- a/assets/style/scss/_global.scss
+++ b/assets/style/scss/_global.scss
@@ -95,7 +95,7 @@ p{
 
 }
 body{
-    background-image: url('./assets/img/bg.jpg');
+    background-image: url('/myCV-main/assets/img/bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
