--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -707,6 +707,7 @@ footer .container .download_cv {
   border: none;
   border-bottom: 1px solid #e9e9e9;
   cursor: pointer;
+  transition: 0.5s ease;
 }
 footer .container .download_cv img {
   width: 20px;
@@ -715,4 +716,6 @@ footer .container .download_cv img {
 footer .container .download_cv:hover {
   background-color: #f0f0f0;
   color: #000;
+  border-radius: 8px;
+  padding: 4px;
 }/*# sourceMappingURL=main.css.map */
