--- a/assets/style/scss/_footer.scss
+++ b/assets/style/scss/_footer.scss
@@ -33,6 +33,7 @@ footer{
             border: none;
             border-bottom: 1px solid #e9e9e9;
             cursor: pointer;
+            transition: 0.5s ease;
 
             img{
                 width: 20px;
@@ -41,6 +42,8 @@ footer{
             &:hover{
                 background-color: #f0f0f0;
                 color: #000;
+                border-radius: 8px;
+                padding: 4px;
             }
         }
     }
