--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -347,7 +347,7 @@ body {
   transition: all 0.15s ease;
   cursor: pointer;
   font-weight: 400;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .main .main_skills .skill-tags .skill-item s,
 .main .main_skills .skill-tags .lang-item s,
@@ -385,6 +385,7 @@ body {
   text-decoration: none;
   justify-content: center;
   transition: 0.3s;
+  font-family: "Montserrat", sans-serif;
 }
 .main .main_skills .skill-tags .skill-item s:after,
 .main .main_skills .skill-tags .lang-item s:after,
@@ -473,6 +474,7 @@ body {
 .main .main_hobby .hobby-tags .hobby-item:hover s {
   color: #aaa;
   transition: 0.3s ease;
+  font-family: "Montserrat", sans-serif;
 }
 .main .main_skills .skill-tags .lang-item s,
 .main .main_skills .lang-tags .lang-item s,
