--- a/assets/style/scss/_content.scss
+++ b/assets/style/scss/_content.scss
@@ -5,7 +5,6 @@
     width: 100%;
     @media screen and (max-width: 980px) {
         flex-direction: column;
-        
     }
     &_info {
         flex-basis: 40%;
@@ -68,7 +67,6 @@
         flex-basis: 60%;
         @media screen and (max-width: 980px) {
             padding: 20px;
-            
         }
     }
     &_content_title {
@@ -93,7 +91,6 @@
                 overflow-x: scroll;
                 overflow-y: hidden;
                 height: max-content;
-                
             }
         }
         a {
@@ -214,7 +211,7 @@
                 transition: all 0.15s ease;
                 cursor: pointer;
                 font-weight: 400;
-                font-family: "Fira Sans Condensed", sans-serif;
+                font-family: "Montserrat", sans-serif;
 
                 s {
                     color: #424242;
@@ -226,6 +223,7 @@
                     text-decoration: none;
                     justify-content: center;
                     transition: 0.3s;
+                    font-family: "Montserrat", sans-serif;
 
                     &:after {
                         content: "y";
@@ -238,6 +236,7 @@
                     s {
                         color: #aaa;
                         transition: 0.3s ease;
+                        font-family: "Montserrat", sans-serif;
                     }
                 }
             }
