--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -29,6 +29,32 @@ p {
   color: #1f1f1f;
 }
 
+ul {
+  list-style: disc;
+  margin: 10px 0px 0px 10px;
+}
+
+li {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+  color: #1f1f1f;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+li::before {
+  content: "";
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  border-radius: 100%;
+  background-color: #1f1f1f;
+}
+
 .h1 {
   font-size: clamp(24px, 3vw, 32px);
   font-style: normal;
